# score-vision

./: .gitignore  README.md  bootstrap.sh  constants.py  pyproject.toml  requirements.txt  validator_auto_update.sh
miner/: .env.example  .gitignore  README.md  dependencies.py  ecosystem.config.js  main.py  pyproject.toml
miner/core/: configuration.py
miner/core/models/: config.py
miner/endpoints/: availability.py  soccer.py
miner/examples/soccer/: main.py  ui.py
miner/scripts/: test_pipeline.py
miner/utils/: model_manager.py
validator/: .env.example  README.md  config.py  dependencies.py  ecosystem.config.js  main.py  pyproject.toml  test_prompts.py
validator/challenge/: challenge_types.py  send_challenge.py
validator/challenges/: __init__.py  api.py
validator/config/: validator_config.yml
validator/db/: operations.py  schema.py
validator/evaluation/: bbox_clip.py  calculate_score.py  evaluation.py  evaluation_loop.py  keypoint_scoring.py  prompts.py  scoring_utils.py  set_weights.py
validator/tests/: simulate_scoring.py
validator/utils/: api.py  async_utils.py  common.py  frame_filter.py  vlm_api.py
