[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sn44"
version = "0.1.0"
description = "Bittensor Subnet 44 - Soccer Video Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "tmoklc", email = "tmoklc@gmail.com"}
]

[project.optional-dependencies]
miner = [
    "supervision",
    "numpy",
    "opencv-python",
    "transformers",
    "umap-learn==0.5.7",
    "scikit-learn",
    "tqdm",
    "sentencepiece",
    "protobuf",
    "llvmlite>=0.41.0",
    "fastapi",
    "streamlit",
    "ultralytics",
    "python-multipart",
    "uvicorn",
    "gdown>=5.2.0",
    "python-dotenv>=1.0.1",
    "fiber[full] @ git+https://github.com/rayonlabs/fiber.git@2.0.1",
    "huggingface-hub>=0.19.0",
]
validator = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic>=2.0.0",
    "PyYAML",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.1",
    "fiber[full] @ git+https://github.com/rayonlabs/fiber.git@2.0.1",
    "aiohttp",
    "httpx",
    "loguru",
    "substrate-interface",
    "opencv-python",
    "numpy",
    "openai>=1.0.0",
    "sqlalchemy",
    "tenacity",
    "pytz",
]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.setuptools]
packages = [
    "miner",
    "validator",
] 