[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "validator"
version = "0.1.0"
description = "Validator service for scoring and evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "tmoklc", email = "tmoklc@gmail.com"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic>=2.0.0",
    "PyYAML",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.1",
    "fiber[full] @ git+https://github.com/rayonlabs/fiber.git@2.0.1",
]

[project.optional-dependencies]
tests = ["pytest"]

[project.urls]
Homepage = "https://github.com/tmoklc/validator" 